# mujoco-peg-in-hole-ur5

./: .gitignore  AGENTS.md  ARTIFACTS.md  COMMANDS.md  PLAN.md  PROJECT_STRUCTURE.md  README.md  REAL_ROBOT_PLAN.md  VISUAL_AUDIT.md  pyproject.toml  requirements.txt
assets/: ur5_peg_in_hole.xml
configs/: real_hole_target_calibration_generated_smoke.yaml  real_hole_target_calibration_rtde_measurement_smoke.yaml  real_hole_target_calibration_smoke.yaml  real_pose_trace_smoke.csv  real_tcp_pose_trace_no_target_smoke.csv  real_tcp_pose_trace_smoke.csv  real_ur5_dryrun.yaml
datasets/: image_correction_ur5e_adapter_medium_targeted_failure_window_2k_oracle.npz.json  image_correction_ur5e_adapter_medium_targeted_near_hole_failure_window_10k_min006_oracle.npz.json  image_correction_ur5e_adapter_wide_medium_targeted_near_hole_collision_window_4k_min006_oracle.npz.json  image_correction_ur5e_adapter_wide_medium_targeted_near_hole_timeout_window_4k_min006_oracle.npz.json  image_expert_50k_sidecam_oracle.npz.json  image_expert_50k_sidecam_visual_camera_control_delay3_oracle.npz.json  image_expert_50k_sidecam_visual_camera_control_oracle.npz.json  image_expert_50k_sidecam_visual_camera_oracle.npz.json  image_expert_5k_sidecam_oracle.npz.json  image_expert_smoke.npz.json  image_expert_ur5e_adapter_fixedcam_50k_oracle.npz.json  image_expert_ur5e_adapter_fixedcam_5k_oracle.npz.json  image_expert_ur5e_adapter_fixedcam_clean_visual_camera_100k_oracle.npz.json  image_expert_ur5e_adapter_fixedcam_clean_visual_camera_150k_oracle.npz.json  (+24 more)
peg_in_hole_mujoco/: __init__.py  paths.py  (+8 more)
(+796 files in other folders)
